<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
    android:layout_height="@dimen/air_launcher_settings_single_line_item_row_height"
                android:background="@drawable/material_compat_bg"
                tools:ignore="RtlHardcoded">

    <com.superapps.view.TypefacedTextView
        style="@style/SettingsItem.SingleLine"
        android:layout_toLeftOf="@+id/weather_settings_kilometer"
        android:layout_toStartOf="@+id/weather_settings_kilometer"
        android:text="@string/weather_settings_item_distance_unit"
        app:typeface="@string/custom_font_regular"/>

    <com.superapps.view.TypefacedTextView
        android:id="@+id/weather_settings_kilometer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="51dp"
        android:layout_marginRight="51dp"
        android:maxLength="10"
        android:text="@string/weather_km"
        android:textColor="@color/weather_settings_inactive_text"
        android:textSize="@dimen/settings_item_text_size"
        app:typeface="@string/custom_font_regular"/>

    <com.superapps.view.TypefacedTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="41dp"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="41dp"
        android:layout_marginStart="3dp"
        android:maxLength="5"
        android:text="@string/weather_settings_cf_slash"
        android:textColor="@color/weather_settings_inactive_text"
        android:textSize="@dimen/settings_item_text_size"
        app:typeface="@string/custom_font_regular"/>

    <com.superapps.view.TypefacedTextView
        android:id="@+id/weather_settings_mile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:maxLength="10"
        android:text="@string/weather_mi"
        android:textColor="@color/weather_settings_inactive_text"
        android:textSize="@dimen/settings_item_text_size"
        app:typeface="@string/custom_font_regular"/>
</RelativeLayout>
